--- a/goodluck.html
+++ b/goodluck.html
@@ -11,9 +11,7 @@
         <div id="good-luck-box">
             <h2>All the Best!</h2>
             <p>You got this! 🌟</p>
-            <img src="img/cookie1.png" alt="Cookie 1">
-            <img src="img/cookie1.png" alt="Cookie 1" style="margin-left: -57px;">
-            <img src="img/flower-bouquet.png" alt="Flower Bouquet" style="margin-left: -28px;">
+            <img src="img/flower.png" alt="Cookie 1" class="cookie">
         </div>
     </div>
 </body>
