--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <p id="quote-text">Quote 1</p>
             <button onclick="nextQuote()">Next</button>
         </div>
+        <a href="animation.html">Animation</a>
     </div>
 
     <script src="script.js"></script>
