--- a/animation.html
+++ b/animation.html
@@ -8,12 +8,15 @@
 </head>
 <body>
   <div class="title">
+    
     <div class="row">
       <div class="neons col-12">
          <h1><em>-BREATHE-</em></h1>
       </div>
+      <h1>Keep going I'm proud of you<br> ⸜(｡˃ ᵕ ˂ )⸝♡ </h1>
+    <br>
    </div>
-    <p class="small">Best viewed in Firefox</p>
+    <!-- <p class="small">A little gesture for you</p> -->
   </div>
 
   <div class="slider">
@@ -26,6 +29,6 @@
     <div class="shadow"></div>
   </div>
 
-  <p class="credit">by <span><a href="https://tanya-shekhawat.netlify.app/" target="_blank">Tanya Shekhawat</a></span></p>
+  <p class="credit">With ❤️ by <span><a href="https://tanya-shekhawat.netlify.app/" target="_blank">Tanya Shekhawat</a></span></p>
 </body>
 </html>
