--- a/checklist.html
+++ b/checklist.html
@@ -21,7 +21,7 @@
             <span></span>
         </section>
     </div>
-    <div class="container" style="height: 500px; width: 500px; text-align: justify;">
+    <!-- <div class="container" > -->
       
         <div id="checklist-box"> 
             <center>
