--- a/checklist.html
+++ b/checklist.html
@@ -31,19 +31,23 @@
             <div class="inbox" style="cursor: pointer;">
                 <div class="item" onclick="toggleCheckbox(this)">
                   <input type="checkbox" id="item1" onchange="checkChecklist()">
-                  <p>GATE Admit Card</p>
+                  <label for="item1">GATE Admit Card</label>
+                  <!-- <p>GATE Admit Card</p> -->
                 </div>
                 <div class="item" onclick="toggleCheckbox(this)">
                   <input type="checkbox" id="item2" onchange="checkChecklist()">
-                  <p>Adhaar Card/ Valid ID Proof</p>
+                  <!-- <p>Adhaar Card/ Valid ID Proof</p> -->
+                  <label for="item2">Adhaar Card/ Valid ID Proof</label>
                 </div>
                 <div class="item" onclick="toggleCheckbox(this)">
                   <input type="checkbox" id="item3" onchange="checkChecklist()">
-                  <p>Pen(s)/ Pencil</p>
+                  <!-- <p>Pen(s)/ Pencil</p> -->
+                  <label for="item3">Pen(s)/ Pencil</label>
                 </div>
                 <div class="item" onclick="toggleCheckbox(this)">
                   <input type="checkbox" id="item4" onchange="checkChecklist()">
-                  <p>Transparent water bottle</p>
+                  <!-- <p>Transparent water bottle</p> --> 
+                  <label for="item4">Transparent water bottle</label>
                 </div>
               </div>
 
