--- a/animation.html
+++ b/animation.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Animated Cube Slider</title>
+  <title>Good Luck</title>
   <link rel="stylesheet" href="animation.css"> 
 </head>
 <body>
